# OmniCraft

./: .gitignore  BUSINESS_STRATEGY.md  DEPLOYMENT.md  Dockerfile  PROJECT_SETUP_SUMMARY.md  PROJECT_STRUCTURE_VISUAL.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  STYLE_TRANSFER_ENGINE_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  paint_colors.py  pyproject.toml
artisan/: CLAUDE.md  README.md  STYLE_TRANSFER_GUIDE.md  STYLE_TRANSFER_QUICKSTART.md  STYLE_TRANSFER_SUMMARY.md  __init__.py  artisan.py  generate_instruction_booklets.py  orchestrator.py  process_all.py  requirements.txt
artisan/analysis/: __init__.py  simple_organic_segmentation.py  technique_analyzer.py
artisan/api/: __init__.py  config.py  main.py  shared_db.py
artisan/api/models/: __init__.py  schemas.py
artisan/api/routes/: __init__.py  download.py  health.py  payment.py  process.py  promo.py  style_transfer.py  upload.py
artisan/api/services/: __init__.py  email.py
artisan/api/tasks/: __init__.py
artisan/cli/: __init__.py  generate.py  generate_multi.py  lesson.py  style_transfer.py
artisan/core/: __init__.py  art_principles.py  color_matcher.py  constraints.py  construction.py  paint_by_numbers.py  paint_database.py  quantization_methods.py  regions.py  scene_graph.py  segmenter.py  types.py
artisan/deploy/: DEPLOYMENT_GUIDE.md  README.md  modal_app.py
artisan/examples/: style_transfer_examples.py
artisan/examples/prompts/: pop_art_geometric.txt
artisan/generators/: __init__.py  instruction_generator.py  paint_kit_generator.py  semantic_paint_by_numbers.py  smart_paint_by_numbers.py  yolo_bob_ross_paint.py  yolo_smart_paint.py
artisan/generators/bob_ross/: __init__.py  constants.py  generator.py  steps.py
artisan/generators/deprecated/: _semantic_paint_by_numbers.py  _smart_paint_by_numbers.py  _yolo_smart_paint.py
artisan/mediums/: __init__.py  base.py
artisan/mediums/acrylic/: __init__.py  constants.py  hybrid_generator.py  medium.py  visualizer.py
artisan/mediums/renderers/: acrylic_renderer.py  base.py  oil_renderer.py
artisan/optimization/: __init__.py  budget_optimizer.py
artisan/paint/: __init__.py
artisan/paint/bob_ross/: __init__.py  constants.py  generator.py  steps.py
artisan/paint/generators/: __init__.py  instruction_generator.py  paint_kit_generator.py  yolo_bob_ross_paint.py  yolo_smart_paint.py
artisan/paint/optimization/: __init__.py  (+1 more)
artisan/perception/: __init__.py  layering_strategies.py  painting_planner.py  scene_analyzer.py  scene_builder.py  subject_detector.py  yolo_segmentation.py
artisan/planning/: __init__.py  lesson_plan.py
artisan/renderers/: __init__.py  acrylic_renderer.py  base.py  oil_renderer.py
artisan/scripts/: __init__.py  process_all.py  process_for_maria.py
artisan/style_transfer/: __init__.py  base.py  registry.py
artisan/style_transfer_experiments/: dalle3_britto_style.py
artisan/transfer/: __init__.py  britto.py
artisan/vision/: __init__.py
paintx/: demo.py  paint_by_numbers.py  requirements.txt
synesthetic-viz/: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  README.md  docker-compose.yml
synesthetic-viz/backend/: organic_visualizer.py  requirements.txt  synesthetic_engine.py  video_generator.py
synesthetic-viz/docs/: DEV_ENVIRONMENT_SETUP.md  MEETING_LOG.md  PROJECT_OVERVIEW.md  README.md  RESEARCH_NOTES.docx  TECHNICAL_ARCHITECTURE.md  project_plan.xlsx
synesthetic-viz/frontend/: index.html  package.json  vite.config.js
synesthetic-viz/input/: untitled_003.m4a
synesthetic-viz/scripts/: run-dev.sh  setup.sh
web/: .env.local.example  .gitignore  Dockerfile  auth.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AuthButton.tsx  ConfigPanel.tsx  ImageUploader.tsx  PresetSelector.tsx  PreviewGallery.tsx  ProductSelector.tsx  StyleSelector.tsx
web/lib/: api.ts
(+66 files in other folders)
