[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artisan-paint"
version = "5.0.0"
description = "AI-Powered Paint-by-Numbers Generation with YOLO Semantic Segmentation and Bob Ross Methodology"
readme = "artisan/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Artisan Team"}
]
keywords = [
    "paint-by-numbers",
    "art",
    "ai",
    "yolo",
    "semantic-segmentation",
    "bob-ross",
    "painting",
    "image-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core image processing
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",

    # YOLO semantic segmentation
    "ultralytics>=8.0.0",

    # Visualization
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
# API server dependencies
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.28.0",  # AWS S3
    "stripe>=5.0.0",
    "redis>=4.5.0",
    "celery>=5.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",  # PostgreSQL async
    "alembic>=1.11.0",  # Database migrations
    "replicate>=0.20.0",  # Replicate API for style transfer
    "requests>=2.28.0",  # HTTP client
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
    "pre-commit>=3.3.0",
]

# Style transfer (optional, heavy dependencies)
style-transfer = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.25.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "controlnet_aux>=0.0.7",
]

# All optional dependencies
all = [
    "artisan-paint[api,dev,style-transfer]",
]

[project.scripts]
artisan = "artisan.cli.generate:main"
artisan-process = "artisan.generators.yolo_bob_ross_paint:main"

[project.urls]
Homepage = "https://github.com/sausterm/OmniCraft"
Documentation = "https://github.com/sausterm/OmniCraft/blob/main/artisan/README.md"
Repository = "https://github.com/sausterm/OmniCraft"
Issues = "https://github.com/sausterm/OmniCraft/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["artisan*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
artisan = ["*.json", "*.yaml", "*.md"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long (handled by black)
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=artisan --cov-report=term-missing"
asyncio_mode = "auto"
